@@ -3,6 +3,7 @@ Changes for 3.4.15rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-14882] fixed crash in vmware collector when receiving invalid xml (vso)
 ........S. [ZBX-14908] fixed crash when processing internal trigger events and deleting triggers at the same time (vso)
 .......PS. [ZBX-14853] fixed error of vmware items caused by misconfigured vmware maxQueryMetrics parameter (MVekslers)
 ........S. [ZBX-14830] fixed possible deadlock when history syncer was trying to update escalations with recovery event id (wiper)
@@ -1362,6 +1363,7 @@ Changes for 3.0.23rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-14882] fixed crash in vmware collector when receiving invalid xml (vso)
 .......PS. [ZBX-14853] fixed error of vmware items caused by misconfigured vmware maxQueryMetrics parameter (MVekslers)
 ..F....... [ZBX-14845] fixed filter in triggers status page not being reset when navigating from dashboard and host inventory (agriscenko)
 
